# brzboot

./: .gitignore  Makefile.am  README  README.md  autogen.sh  brzboot  brzbootia32.efi  configure.ac  linuxia32.efi.stub
man/: brzboot.8  brzboot.xml
src/efi/: brzboot.c  console.h  graphics.h  linux.h  pefile.h  util.h
src/setup/: setup.c
test/: test-create-disk.sh
